--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ subjects:
 - !lcc 'PM'
 - !lcsh 'Esperanto'
 - !lcsh 'Esperanto -- Readers'
+- GITenberg
 title: "Karlo\r\nFacila Legolibro por la Lernado de Esperanto"
 url: http://www.gutenberg.org/ebooks/24525
